--- a/index.html
+++ b/index.html
@@ -31,26 +31,24 @@
     <div class="container" id="cont">
         <div class="row">
             <div class="col-md-2 col-xs-2">
-              <ul class="list-group" id="samples">
-                <li class="list-group-item active">Выборка</li>
-              </ul>
+              <div class="list-group" id="samples">
+                <a href="#" class="list-group-item active">Выборка</a>
+            </div>
             </div>
             <div class="col-md-2 col-xs-2">
-              <ul class="list-group" id="varser">
-                <li class="list-group-item active">Вар. ряд</li>
-              </ul>
+              <div class="list-group" id="varser">
+                <a href="#" class="list-group-item active">Вар. ряд</a>
+            </div>
             </div>
             <div class="col-md-8 col-xs-8">
                 <ul class="list-group" id="main">
                   <li class="list-group-item active">Информация</li>
-                  <li class="list-group-item">
+                  <li class="list-group-item" id="genParams">
                       <h4 class="list-group-item-heading">Параметры выборки</h4>
-                      <p class="list-group-item-text" id="genParams">...</p>
                   </li>
                   <li class="list-group-item">
-                      <h4 class="list-group-item-heading"></h4>
                       <p class="list-group-item-text" id="errorsOut">
-                          <ul class="list-group" id="main">
+                          <ul class="list-group">
                               <li class="list-group-item">
                                   <!-- <p class="list-group-item-text">...</p> -->
                                   <h4 class="list-group-item-heading">Промахи по Диксону (q - значимость)</h4>
