--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
         <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
-                     <h4 class="modal-title" id="myModalLabel">Enter data</h4>
+                     <h4 class="modal-title" id="myModalLabel">Введите данные или файл</h4>
                 </div>
                 <div class="modal-body">
                     <textarea id="input"name="name" rows="15"></textarea>
                     <div class="text-center">
                         <div id="btns" class="btn-group">
                             <button id="goBtn" class="btn btn-primary">Go</button>
-                            <button id="load1" class="btn btn-primary">Load 1</button>
-                            <button id="load2" class="btn btn-primary">Load 2</button>
+                            <button id="load1" class="btn btn-primary">Файл 1</button>
+                            <button id="load2" class="btn btn-primary">Файл 2</button>
                         </div>
                     </div>
                 </div>
